upload file and git url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto= create
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
 
+spring.mvc.static-path-pattern=/uploads/**
+spring.resources.static-locations=classpath:/uploads/
