--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.datasource.url=jdbc:h2:file:./userDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.ddl-auto= update
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
+
 spring.mvc.static-path-pattern=/uploads/**
 spring.resources.static-locations=classpath:/uploads/
