--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-ui
+spring.h2.console.path=/console
 
 spring.mvc.static-path-pattern=/uploads/**
 spring.resources.static-locations=classpath:/uploads/
